fix nprogress type.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,7 +24,7 @@
       href="//fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i"
       rel="stylesheet"
     />
-    <title>Vue GraphQL</title>
+    <title></title>
   </head>
 
   <body>
